Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20146

[PATCH] Declarative/QML's XMLHttpRequest does not expose misc HTTP status codes

    XMLWordPrintable

Details

    Description

      For example status code 400 resulted in UnknownContentError causing
      m_errorFlag to be set, in turn hiding status code and text from the
      application. Attached patch fixes this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            oleavr Ole André Vadla Ravnås
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes