Don't error if response results in UnknownContentError

XMLHttpRequest specs state that only 'network errors' should result
in a request error, and a HTTP response like 400 Bad Request (which
results in QNetworkReply::UnknownContentError) is an indication of the
HTTP server response rather than a network error.

Task-number: QTBUG-20146
Change-Id: I10c132788200e15b0362da839689a0bb3c2b4a0d
Reviewed-on: http://codereview.qt.nokia.com/1915
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>